NProjects/NVisionInspect/vision/NVisionInspectProcessor/header/NVisionInspectProcessorCSharp.h

												        
	__declspec(dllexport) bool                          SetExposureTime(CNVisionInspectProcessor* pProcessor, int nCamIdx, double dExpTime);
												        
	__declspec(dllexport) bool                          SetAnalogGain(CNVisionInspectProcessor* pProcessor, int nCamIdx, double dGain);
												        
	__declspec(dllexport) bool                          SaveImage(CNVisionInspectProcessor* pProcessor, int nCamIdx);