NProjects/NVisionInspect/gui/NVisionInspectGUI/Manager/Class/NVisionInspectProcessorDll.cs


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SetExposureTime(IntPtr NVisionInspectProcessor, int nCamIdx, double dExpTime);
        public bool SetExposureTime(int nCamIdx, double dExpTime) { return SetExposureTime(m_NVisionInspectProcessor, nCamIdx, dExpTime); }
        /**********************************
    - Set Exposure
    - Parameter : Instance Pointer, Camera Index, Exposure Time
     **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SetAnalogGain(IntPtr NVisionInspectProcessor, int nCamIdx, double dGain);
        public bool SetAnalogGain(int nCamIdx, double dGain) { return SetAnalogGain(m_NVisionInspectProcessor, nCamIdx, dGain); }
        /**********************************
   - Set Analog Gain
   - Parameter : Instance Pointer, Camera Index, Gain Analog
    **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool SaveImage(IntPtr NVisionInspectProcessor, int nCamIdx);
        public bool SaveImage(int nCamIdx) { return SaveImage(m_NVisionInspectProcessor, nCamIdx); }
        /**********************************
   - Save Image
   - Parameter : Instance Pointer, Camera Index
    **********************************/

        #endregion
    }
}
